# pyigrf2

./: .gitignore  README.md  meson.build  pyproject.toml  requirements-build.txt  tox.ini
pyigrf/: __init__.py  igrf.pyf  igrf14.f  meson.build
pyigrf2/: __init__.py  igrf_src.f  meson.build
src/pyigrf/: __init__.py  igrf.pyf  igrf_src.f  meson.build
tests/: test_import.py
