[build-system]
requires = ["meson-python>=0.13.0", "oldest-supported-numpy"]
build-backend = "mesonpy"

[project]
name = "pyigrf2"
version = "0.1.0"
description = "Python bindings for IGRF (International Geomagnetic Reference Field)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy",
]

[tool.meson]
shared-module = true
